--- a/domains/auth/docker-environment/grafana/provisioning/dashboards/dashboard_provisioning.yaml
+++ b/domains/auth/docker-environment/grafana/provisioning/dashboards/dashboard_provisioning.yaml
@@ -9,4 +9,5 @@ providers:
     editable: true
     updateIntervalSeconds: 10
     options:
-      path: /etc/grafana/provisioning/dashboards
+      #path: /etc/grafana/provisioning/dashboards
+      path: /var/lib/grafana/dashboards
