--- a/domains/auth/.devcontainer/devcontainer.json
+++ b/domains/auth/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Auth domain",
+    "name": "Auth domain - REVERT THIS CHANGE",
     "build": {
         "dockerfile": "Dockerfile",
         "args": {}
