--- a/.github/actions/yaml-set/action.yaml
+++ b/.github/actions/yaml-set/action.yaml
@@ -15,6 +15,13 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Set value
+    - name: Deprecation warning
       shell: bash
-      run: yq '.${{ inputs.yaml_path }} = ".${{ inputs.value }}"' '${{ inputs.yaml_file }}'
+      run: echo "::warning::Using deprecated action, use yq directly instead"
+
+    - name: install yamlpath
+      uses: Energinet-DataHub/energy-origin/.github/actions/yamlpath-install@main
+
+    - name: Set yaml value
+      shell: bash
+      run: yaml-set --change ${{ inputs.yaml_path }} --value ${{ inputs.value }} ${{ inputs.yaml_file }}
