--- a/domains/transfer-agreements/TransferAgreements.API/API.IntegrationTests/API.IntegrationTests.csproj
+++ b/domains/transfer-agreements/TransferAgreements.API/API.IntegrationTests/API.IntegrationTests.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="3.1.0" />
