--- a/domains/auth/Auth.API/API/appsettings.Development.json
+++ b/domains/auth/Auth.API/API/appsettings.Development.json
@@ -28,6 +28,7 @@
     "Oidc:ResueSubject": "false",
     "Jaeger:AgentHost": "localhost",
     "Jaeger:AgentPort": 6831,
+    "Otlp:ReceiverEndpoint": "http://localhost:4317",
     "IdentityProvider:Providers": [
         "MitID_Private",
         "MitID_Professional",
