--- a/domains/certificates/Shared/CertificateEvents/CertificateEvents.csproj
+++ b/domains/certificates/Shared/CertificateEvents/CertificateEvents.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CertificateValueObjects\CertificateValueObjects.csproj" />
+  </ItemGroup>
+
 </Project>
