--- a/.github/actions/yaml-set/action.yaml
+++ b/.github/actions/yaml-set/action.yaml
@@ -15,6 +15,10 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Deprecation warning
+      shell: bash
+      run: echo "::warning::Using deprecated action, use yq directly instead"
+
     - name: install yamlpath
       uses: Energinet-DataHub/energy-origin/.github/actions/yamlpath-install@main
 
