--- a/domains/auth/docker-environment/grafana/provisioning/datasources/datasource.yaml
+++ b/domains/auth/docker-environment/grafana/provisioning/datasources/datasource.yaml
@@ -4,3 +4,8 @@
     type: prometheus
     url: http://prometheus:9090
     isDefault: true
+  - name: Jaeger
+    access: proxy
+    type: jaeger
+    url: http://jaeger:16686
+    isDefault: false
