--- a/domains/auth/docker-environment/docker-compose.yml
+++ b/domains/auth/docker-environment/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     container_name: pgadmin
     restart: always
     ports:
-      - "5050:80"
+      - "5050:80" # pgAdmin UI port
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.admin
       PGADMIN_DEFAULT_PASSWORD: admin
@@ -39,17 +39,14 @@ services:
     image: jaegertracing/all-in-one:latest
     container_name: jaeger
     environment:
-      - COLLECTOR_OTLP_ENABLED=true # This will enable you to use a generic OTLP exporter instead of a specific one for Jaeger.
+      - COLLECTOR_OTLP_ENABLED=true
       - SPAN_STORAGE_TYPE=badger
       - BADGER_EPHEMERAL=false
       - BADGER_DIRECTORY_VALUE=/data
       - BADGER_DIRECTORY_KEY=/data
-#      - METRICS_STORAGE_TYPE=prometheus
     ports:
       - "16686:16686" # Jaeger UI port
       - "4317" # OTLP gRPC default port
-#      - "14268"
-#      - "14250"
     volumes:
       - jaeger:/data
 
@@ -63,9 +60,7 @@ services:
       - "9464" # Default OpenTelemetry Prometheus exporter port
       - "4317:4317" # OTLP gRPC receiver port
       - "4318:4318" # OTLP http receiver port
-#      - "8888:8888" # Prometheus metrics exposed by the collector port (?)
-#      - "8889:8889" # Prometheus exporter metrics port (?)
-#      - "13133:13133" # health_check extension (?)
+#      - "13133:13133" # Health-Check extension port
     depends_on:
       - jaeger
 
@@ -82,7 +77,7 @@ services:
       - ./grafana/dashboards:/var/lib/grafana/dashboards
       - grafana:/var/lib/grafana
     ports:
-      - "3000:3000"
+      - "3000:3000" # Grafana UI port
 
 volumes:
   postgres:
