--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -9,8 +9,8 @@ inputs:
 
   dotnet-version:
     description: The version of dotnet to setup
-    default: 6.0.101
-    required: false
+    default: 7.0.203
+    required: true
 
 runs:
   using: composite
