--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -8,9 +8,8 @@ inputs:
     required: true
 
   dotnet-version:
-    description: The version of dotnet to setup
-    default: 6.0.101
-    required: false
+    description: The version of dotnet to use
+    required: true
 
 runs:
   using: composite
@@ -18,10 +17,22 @@ runs:
   steps:
     - uses: actions/checkout@v3
 
+    - name: Pin dotnet version
+      shell: bash
+      working-directory: ${{ inputs.solution-file-folder }}
+      run: echo '{"sdk":{"version":"${{ inputs.dotnet-version }}"}}' > global.json
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
+
+    - name: Print dotnet information
+      shell: bash
+      working-directory: ${{ inputs.solution-file-folder }}
+      run: |
+        dotnet --info
+        dotnet --version
 
     - name: Ensure solution or project exists
       shell: bash
