--- a/domains/auth/Auth.API/API/Dockerfile
+++ b/domains/auth/Auth.API/API/Dockerfile
@@ -1,9 +1,10 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS base
+ARG DOTNET_VERSION=7.0
+FROM mcr.microsoft.com/dotnet/aspnet:${DOTNET_VERSION}-alpine AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
+FROM mcr.microsoft.com/dotnet/sdk:${DOTNET_VERSION}-alpine AS build
 WORKDIR /src
 COPY ["Auth.API/API/API.csproj", "Auth.API/API/"]
 RUN dotnet restore "Auth.API/API/API.csproj"
