--- a/.github/workflows/build-libraries.yaml
+++ b/.github/workflows/build-libraries.yaml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Resolve paths
+      - name: Resolve values
         shell: bash
         run: |
           solution=$(dirname "${{ matrix.projects.project }}")
@@ -60,13 +60,23 @@ jobs:
           printf 'Solution: %s\n' "$solution"
           printf 'Project: %s\n' "$project"
 
+          [ -f "${{ env.SOLUTION }}/global.json" ] || echo "{}" > "${{ env.SOLUTION }}/global.json"
+          settings=$(jq -srec '.[0] * .[1]' "global.json" "${{ env.SOLUTION }}/global.json")
+          sdk=$(printf '%s' "$settings" | jq -rce '.sdk.version')
+
           echo "SOLUTION=$solution" >> $GITHUB_ENV
           echo "PROJECT=$project" >> $GITHUB_ENV
+          echo "SDK_VERSION=$sdk" >> $GITHUB_ENV
 
       - name: Resolve version
         id: resolve-version
         shell: bash
         run: echo "result=$(yq '.version' ${{ env.SOLUTION }}/version.yaml)" >> $GITHUB_OUTPUT
+
+      - name: Pin dotnet version
+        shell: bash
+        working-directory: ${{ env.SOLUTION }}
+        run: echo '{"sdk":{"version":"${{ inputs.dotnet-version }}"}}' > global.json
 
       - name: Build library
         uses: ./.github/actions/dotnet-publish-nuget-package
@@ -75,3 +85,4 @@ jobs:
           project-name: ${{ env.PROJECT }}
           package-version: ${{ steps.resolve-version.outputs.result }}
           nuget-api-key: ${{ secrets.NUGET_API_KEY }}
+          dotnet-version: ${{ env.SDK_VERSION }}
