--- a/domains/auth/Auth.API/API/Dockerfile
+++ b/domains/auth/Auth.API/API/Dockerfile
@@ -1,10 +1,11 @@
-ARG DOTNET_VERSION=7.0
-FROM mcr.microsoft.com/dotnet/aspnet:${DOTNET_VERSION}-alpine3.17 AS base
+ARG SDK_VERSION
+ARG RUNTIME_VERSION
+FROM mcr.microsoft.com/dotnet/aspnet:${RUNTIME_VERSION}-alpine3.17 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:${DOTNET_VERSION}-alpine3.17 AS build
+FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION}-alpine3.17 AS build
 WORKDIR /src
 COPY ["Auth.API/API/API.csproj", "Auth.API/API/"]
 RUN dotnet restore "Auth.API/API/API.csproj"
