--- a/libraries/dotnet/EnergyOrigin.TokenValidation/.devcontainer/devcontainer.json
+++ b/libraries/dotnet/EnergyOrigin.TokenValidation/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "TokenValidation - trigger",
+    "name": "TokenValidation",
     "build": {
         "dockerfile": "Dockerfile",
         "args": {}
