--- a/domains/certificates/RegistryConnector/Worker/Dockerfile
+++ b/domains/certificates/RegistryConnector/Worker/Dockerfile
@@ -1,4 +1,6 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+ARG SDK_VERSION
+ARG RUNTIME_VERSION
+FROM mcr.microsoft.com/dotnet/aspnet:${RUNTIME_VERSION}-alpine3.17 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
@@ -6,7 +8,7 @@ EXPOSE 443
 RUN apt-get -y update && apt-get -y install wget
 HEALTHCHECK CMD wget -qO- http://localhost/health > /dev/null || exit 1
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION}-alpine3.17 AS build
 WORKDIR /src
 COPY ["RegistryConnector/Worker/Worker.csproj", "RegistryConnector/Worker/"]
 RUN dotnet restore "RegistryConnector/Worker/Worker.csproj"
