--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -66,12 +66,12 @@ jobs:
           PATTERN: ${{ steps.diff.outputs.pattern }}
         run: |
           matrix=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$PATTERN" | while read domain; do
-            [ -f "$domain/global.json" ] || echo "{}" > "$domain/global.json"
-            echo '{"draft": false}' > "$domain/default.global.json"
-            settings=$(jq -srec '.[0] * .[1] * .[2] | .path=$path' --arg path "$domain" "$domain/default.global.json" "$domain/../../global.json" "$domain/global.json")
+            [ -f "$domain/domain.json" ] || echo "{}" > "$domain/domain.json"
+            echo '{"draft": false}' > "$domain/default.domain.json"
+            settings=$(jq -srec '.[0] * .[1] | .path=$path' --arg path "$domain" "$domain/default.domain.json" "$domain/domain.json")
 
             draft=$(printf '%s' "$settings" | jq -rce '.draft')
-            sdk=$(printf '%s' "$settings" | jq -rce '.sdk.version')
+            sdk=$(cd "$domain"; dotnet --version)
             projects=$(find "$domain" -mindepth 3 -maxdepth 3 -name "*.csproj" -exec dirname {} \; | egrep -v '[^\/]*/[^\/]*/Shared/[^\/]*' | egrep -v 'Tests$' | while read directory; do printf '{"path":"%s","draft":"%s","dotnetVersion":"%s"}' "$directory" "$draft" "$sdk"; done | jq -sc '.')
 
             printf '{"domain":%s,"projects":%s}' "$settings" "$projects"
