--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -146,7 +146,7 @@ jobs:
       - name: Pin dotnet version
         shell: bash
         working-directory: ${{ steps.resolver.outputs.service }}
-        run: echo '{"sdk":{"rollForward":"disable","version":"${{ inputs.dotnet-version }}"}}' > global.json
+        run: echo '{"sdk":{"rollForward":"disable","version":"${{ matrix.build.dotnetVersion }}"}}' > global.json
 
       - name: Test and lint image
         uses: ./.github/actions/dotnet-validate-domain
