--- a/.github/workflows/build-libraries.yaml
+++ b/.github/workflows/build-libraries.yaml
@@ -74,8 +74,7 @@ jobs:
 
       - name: Pin dotnet version
         shell: bash
-        working-directory: ${{ env.SOLUTION }}
-        run: echo '{"sdk":{"rollForward":"disable","version":"${{ env.SDK_VERSION }}"}}' > global.json
+        run: echo '{"sdk":{"rollForward":"disable","version":"${{ env.SDK_VERSION }}"}}' > "${{ env.SOLUTION }}/global.json"
 
       - name: Build library
         uses: ./.github/actions/dotnet-publish-nuget-package
