--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -25,18 +25,20 @@ runs:
 
     - name: Print dotnet information
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
-      run: dotnet --info
+      run: |
+        cd "${{ inputs.solution-file-folder }}"
+        dotnet --info
 
     - name: Print dotnet version
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
-      run: dotnet --version
+      run: |
+        cd "${{ inputs.solution-file-folder }}"
+        dotnet --version
 
     - name: Ensure solution or project exists
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
       run: |
+        cd "${{ inputs.solution-file-folder }}"
         compgen -G "*.sln" >/dev/null && exit 0
         compgen -G "*.csproj" >/dev/null && exit 0
 
@@ -47,28 +49,30 @@ runs:
 
     - name: Restore
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
-      run: dotnet restore
+      run: |
+        cd "${{ inputs.solution-file-folder }}"
+        dotnet restore
 
     - name: Lint
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
-      run: dotnet format --verify-no-changes -v diag
+      run: |
+        cd "${{ inputs.solution-file-folder }}"
+        dotnet format --verify-no-changes -v diag
 
     - name: Test
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
       run: dotnet test --no-restore --verbosity normal
 
     - name: Build
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
-      run: dotnet build --no-restore --configuration Release
+      run: |
+        cd "${{ inputs.solution-file-folder }}"
+        dotnet build --no-restore --configuration Release
 
     - name: Migration
       shell: bash
-      working-directory: ${{ inputs.solution-file-folder }}
       run: |
+        cd "${{ inputs.solution-file-folder }}"
         for service in $(find . -name "*.csproj"); do
           dotnet list "$service" package --format=json | grep 'Microsoft.EntityFrameworkCore"' >/dev/null || continue
           name=$(basename "$service" .csproj)
