--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -145,7 +145,11 @@ jobs:
 
       - name: Pin dotnet version
         shell: bash
-        run: echo '{"sdk":{"rollForward":"disable","version":"${{ matrix.build.dotnetVersion }}"}}' > "${{ steps.resolver.outputs.domain }}/global.json"
+        run: |
+          echo '{"sdk":{"rollForward":"disable","version":"${{ matrix.build.dotnetVersion }}"}}' > "${{ steps.resolver.outputs.domain }}/global.json"
+          dotnet --info
+          cd "${{ steps.resolver.outputs.domain }}"
+          dotnet --info
 
       - name: Test and lint image
         uses: ./.github/actions/dotnet-validate-domain
