--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -33,6 +33,13 @@ runs:
       working-directory: ${{ inputs.solution-file-folder }}
       run: dotnet --version
 
+    - name: Print debug
+      shell: bash
+      run: |
+        echo '--start-of-list--'
+        find . -name global.json -exec sh -c 'echo "$1:"; cat "$1"' {} \;
+        echo '--end-of-list--'
+
     - name: Ensure solution or project exists
       shell: bash
       working-directory: ${{ inputs.solution-file-folder }}
