--- a/.github/actions/dotnet-validate-domain/action.yaml
+++ b/.github/actions/dotnet-validate-domain/action.yaml
@@ -39,7 +39,7 @@ runs:
         echo '--start-of-list--'
         find . -name global.json
         echo '--end-of-list--'
-        find . -name global.json -exec sh -c 'echo "$1"; cat "$1"; echo' {} \;
+        find . -name global.json -exec sh -c 'echo "$1"; cat "$1"; echo' sh {} \;
 
     - name: Ensure solution or project exists
       shell: bash
