--- a/domains/certificates/RegistryConnector/Worker/Dockerfile
+++ b/domains/certificates/RegistryConnector/Worker/Dockerfile
@@ -1,11 +1,11 @@
 ARG SDK_VERSION
 ARG RUNTIME_VERSION
-FROM mcr.microsoft.com/dotnet/aspnet:${RUNTIME_VERSION}-alpine3.17 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:${RUNTIME_VERSION} AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION}-alpine3.17 AS build
+FROM mcr.microsoft.com/dotnet/sdk:${SDK_VERSION} AS build
 WORKDIR /src
 COPY ["RegistryConnector/Worker/Worker.csproj", "RegistryConnector/Worker/"]
 RUN dotnet restore "RegistryConnector/Worker/Worker.csproj"
@@ -17,9 +17,7 @@ FROM build AS publish
 RUN dotnet publish "Worker.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
-
-RUN apk add --no-cache tzdata
-
+RUN apt-get -y update && apt-get -y install wget && apt-get clean
 WORKDIR /app
 COPY --from=publish /app/publish .
 HEALTHCHECK CMD wget -qO- http://localhost:80/healthz > /dev/null || exit 1
